@@ -1,3 +1,9 @@
+2002-09-24  Chris Blumenberg  <cblu@apple.com>
+
+	Documentation for WebHTMLView
+
+        * WebView.subproj/WebHTMLView.h:
+
 2002-09-24  Richard Williamson   <rjw@apple.com>
 
         Documentation changes.  Removal of imports from
